// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`directive > custom directive > basic 1`] = `
"(() => {
  const _directive_example = _resolveDirective("example");
  const n0 = t0();
  _withVaporDirectives(n0, [[_directive_example]]);
  return n0;
})();
"
`;

exports[`directive > custom directive > binding value 1`] = `
"(() => {
  const n0 = t0();
  _withVaporDirectives(n0, [[vExample, () => msg]]);
  return n0;
})();
"
`;

exports[`directive > custom directive > component 1`] = `
"(() => {
  const n0 = _createComponent(Comp, null, { default: () => {
    const n2 = _createIf(() => "true", () => {
      const n5 = t0();
      _setInsertionState(n5);
      const n4 = _createComponent(Bar);
      _withVaporDirectives(n4, [[
        vHello,
        void 0,
        void 0,
        { world: true }
      ]]);
      return n5;
    }, null, true);
    return n2;
  } }, true);
  _withVaporDirectives(n0, [[vTest]]);
  return n0;
})();
"
`;

exports[`directive > custom directive > dynamic parameters 1`] = `
"(() => {
  const n0 = t0();
  _withVaporDirectives(n0, [[
    vExample,
    () => msg,
    foo
  ]]);
  return n0;
})();
"
`;

exports[`directive > custom directive > modifiers 1`] = `
"(() => {
  const n0 = t0();
  _withVaporDirectives(n0, [[
    vExample,
    () => msg,
    void 0,
    { bar: true }
  ]]);
  return n0;
})();
"
`;

exports[`directive > custom directive > modifiers w/o binding 1`] = `
"(() => {
  const n0 = t0();
  _withVaporDirectives(n0, [[
    vExample,
    void 0,
    void 0,
    { "foo-bar": true }
  ]]);
  return n0;
})();
"
`;

exports[`directive > custom directive > static parameters 1`] = `
"(() => {
  const n0 = t0();
  _withVaporDirectives(n0, [[
    vExample,
    () => msg,
    "foo"
  ]]);
  return n0;
})();
"
`;

exports[`directive > custom directive > static parameters and modifiers 1`] = `
"(() => {
  const n0 = t0();
  _withVaporDirectives(n0, [[
    vExample,
    () => msg,
    "foo",
    { bar: true }
  ]]);
  return n0;
})();
"
`;
